--- a/theplant.html
+++ b/theplant.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
  <html>
    <head>
-       <title>The Plant</title>
+       <title>theplant</title>
      <audio src="bgm1.mp3" width="400" controls autoplay>
 </audio>
    </head>
